--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monsters-rolodex",
+  "name": "resale-fortune",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.52.2",
+    "styled-components": "5.3.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
