--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.25.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.22",
+    "@types/react": "17.0.42",
+    "@types/react-dom": "17.0.14",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -19,8 +27,11 @@
     "redux-saga": "1.1.3",
     "reselect": "4.1.5",
     "sass": "^1.52.2",
+    "serverless-http": "^2.7.0",
+    "stripe": "^8.210.0",
     "styled-components": "5.3.3",
-    "web-vitals": "^2.1.0"
+    "typescript": "4.6.2",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
