--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "17.0.22",
     "@types/react": "17.0.42",
     "@types/react-dom": "17.0.14",
+    "@types/redux-logger": "3.0.9",
+    "@types/styled-components": "5.1.24",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase": "^9.8.2",
@@ -23,13 +25,14 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "6.0.0",
-    "redux-thunk": "2.4.1",
     "redux-saga": "1.1.3",
+    "redux-thunk": "2.4.1",
     "reselect": "4.1.5",
     "sass": "^1.52.2",
     "serverless-http": "^2.7.0",
     "stripe": "^8.210.0",
     "styled-components": "5.3.3",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "4.6.2",
     "web-vitals": "2.1.4"
   },
@@ -56,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-logger": "^3.0.9"
   }
 }
