--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "crypto": "^1.0.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "firebase": "9.6.6",
     "graphql": "^16.8.1",
     "react": "^17.0.2",
@@ -17,6 +19,8 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "sass": "1.49.7",
+    "serverless-http": "^2.7.0",
+    "stripe": "^8.210.0",
     "styled-components": "5.3.3",
     "web-vitals": "2.1.4"
   },
