--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-styled-carousel": "^0.5.1",
     "sass": "1.49.7",
     "serverless-http": "^2.7.0",
     "stripe": "^8.210.0",
